--- a/styles.css
+++ b/styles.css
@@ -86,10 +86,10 @@ h1 {
     font-size: 18px;
     outline: none;
     background: transparent;
+    color: gray;
 }
 
 #sudoku-grid td input:disabled {
-    background-color: #e6e6e6;
     color: #333;
 }
 
@@ -134,7 +134,6 @@ body.dark-mode {
 }
 
 body.dark-mode #sudoku-grid td input:disabled {
-    background-color: #333;
     color: white;
 }
 
